--- a/deployment.yml
+++ b/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: bms-container
-        image: kastrov/bms:latest  # Replace with your Docker image
+        image: sagarwa/addressbook:1.0  # Replace with your Docker image
         ports:
         - containerPort: 3000  # Replace with the port your app runs on
